--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ajv-keywords": "^3.2.0",
     "babel-core": "^6.26.0",
     "engine.io": "^3.2.0",
+    "firebase": "^4.13.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
