--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /node_modules
-.package-lock.json
 
 # testing
 /coverage
@@ -21,4 +20,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+.package-lock.json
+yarn.lock
+the-conch.code-workspace
+database.rules.json
+firebase.json
+.firebaserc
+.babelrc
+.gitignore
