--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "babel-core": "^6.26.0",
     "engine.io": "^3.2.0",
     "firebase": "^4.13.1",
+    "nedb": "^1.8.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
     "socket.io": "^2.1.0",
+    "uuid": "^3.2.1",
     "uws": "^9.148.0"
   },
   "scripts": {
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1"
   },
