--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "engine.io": "^3.2.0",
     "firebase": "^4.13.1",
     "nedb": "^1.8.0",
+    "node-static": "^0.7.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
