--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "ajv": "^6.4.0",
     "ajv-keywords": "^3.2.0",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "engine.io": "^3.2.0",
     "firebase": "^4.13.1",
     "nedb": "^1.8.0",
     "node-static": "^0.7.10",
+    "npm": "^6.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
@@ -30,7 +32,7 @@
     "babel-preset-react": "^6.24.1"
   },
   "description": "The Conch",
-  "main": "src/the_island/index.js",
+  "main": "src/index.js",
   "directories": {
     "lib": "lib"
   },
