--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "ajv": "^6.4.0",
     "ajv-keywords": "^3.2.0",
-    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "engine.io": "^3.2.0",
     "firebase": "^4.13.1",
@@ -14,7 +13,7 @@
     "npm": "^6.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "socket.io": "^2.1.0",
     "uuid": "^3.2.1",
     "uws": "^9.148.0"
