--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "engine.io": "^3.2.0",
+    "express-react-views": "^0.10.5",
     "firebase": "^4.13.1",
     "nedb": "^1.8.0",
     "node-static": "^0.7.10",
@@ -17,7 +18,8 @@
     "react-scripts": "1.1.4",
     "socket.io": "^2.1.0",
     "uuid": "^3.2.1",
-    "uws": "^9.148.0"
+    "uws": "^9.148.0",
+    "websocket": "^1.0.26"
   },
   "scripts": {
     "start": "react-scripts start",
